<resources>
    <string name="app_name">D2M</string>
    <string name="title_activity_intro">IntroActivity</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get_started_button_text">Get Started</string>
    <string name="select_brand_text">Select Brand</string>
    <string name="no_result_text">Sorry, We couldn\'t find any results</string>
    <string name="select_model_text">Select Model</string>
    <string name="add_car_text">Add Car</string>
    <string name="car_registration_hint">XX-00-XX-0000</string>
    <string name="enter_vehicle_num_text">Please enter your vehicle number</string>
    <string name="car_registration_heading">Car Registration</string>
    <string name="select_fuel_type_text">Select Fuel Type</string>
    <string name="default_car_checkbox_text">Set as Default Car</string>
    <string name="default_address_checkbox_text">Set as Default Address</string>
    <string name="add_car_button_text">Add Car</string>
    <string name="login_heading">LogIn</string>
    <string name="enter_your_mobile_number_text">Enter your Mobile number</string>
    <string name="mob_number_prefix_text">+91</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="whatsapp_updates_checkbox_text">Get updates on WhatsApp</string>
    <string name="login_next_button_text">Next</string>
    <string name="login_with_social_media_text">Login with Social Media</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="save_address_button_text">Save Address</string>
    <string name="submit_area_button_text">Submit</string>
    <string name="login_button_text">LogIn</string>
    <string name="selected_brand_model_text">%1$s - %2$s</string>
    <string name="home">Home</string>
    <string name="help">Help</string>
    <string name="orders">Orders</string>
    <string name="account">Account</string>
    <string name="notifications">Notifications</string>
    <string name="enter_otp_text">Please enter the OTP</string>
    <string name="resend_code_text">Resend code?</string>
    <string name="available_services_text">Available Services</string>
    <string name="regular_service_text">Regular Service</string>
    <string name="data_not_specified">Not Specified!</string>
    <string name="view_cart_text"><u>View Cart</u></string>
    <string name="logout_button_text">Logout</string>
    <string name="services_instructions_text">Add Services Instructions (optional)</string>
    <string name="apply_coupon_button_text">Apply Coupon</string>
    <string name="pay_using_reward_coin_text">Pay Using Reward Coin</string>
    <string name="total_you_pay_text">Total You Pay :</string>
    <string name="bill_details_text">Bill Details</string>
    <string name="order_value_text">Order Value</string>
    <string name="pay_now_button_text">Pay Now</string>
    <string name="default_country">India</string>
    <string name="default_state">Gujarat</string>
    <string name="customer_full_name_hint">Full Name(Required)*</string>
    <string name="customer_phone_num_hint">Phone Number(Required)*</string>
    <string name="billing_email_hint">Billing Email(Required)*</string>
    <string name="address_house_number_name_hint">House Number, Building Name(Required)*</string>
    <string name="address_road_colony_hint">Road Name, Area, Colony(Required)*</string>
    <string name="address_area_hint">Select Area(Required)*</string>
    <string name="area_city_serve_text">City We Serve</string>
    <string name="radio_button_1_text">Ahmedabad</string>
    <string name="radio_button_2_text">Gandhinagar</string>
    <string name="select_area_text">Select Area</string>
    <string name="checkout_button_text">Checkout</string>
    <string name="total_value_text">Total Value</string>
    <string name="your_location_text">Your Location</string>
    <string name="preferred_date_time_text"><![CDATA[Select Preferred Date & Time]]></string>
    <string name="select_time_slot_text">Select Time Slot</string>
</resources>