<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/img_home"
        android:title="@string/home" />

    <item
        android:id="@+id/helpFragment"
        android:icon="@drawable/img_help"
        android:title="@string/help" />

    <item
        android:id="@+id/ordersFragment"
        android:icon="@drawable/img_myorders"
        android:title="@string/orders" />

    <item
        android:id="@+id/accountFragment"
        android:icon="@drawable/img_account"
        android:title="@string/account" />

    <item
        android:id="@+id/notificationsFragments"
        android:icon="@drawable/img_notification"
        android:title="@string/notifications" />

</menu>
