<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.addcar.add_car_registration.AddCarRegistrationFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:weightSum="4">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:scaleType="fitCenter"
            android:src="@drawable/login_car" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:layout_weight="2"
            android:gravity="top">

            <TextView
                android:id="@+id/addCarTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_registration_heading"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/enterVehicleNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/addCarTitle"
                android:layout_marginTop="15dp"
                android:text="@string/enter_vehicle_num_text"
                android:textColor="@color/black"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/vehicleNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/enterVehicleNum"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_rectangle_button"
                android:hint="@string/car_registration_hint"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="10"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/addCar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/vehicleNumber"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/white"
                android:enabled="false"
                android:padding="15dp"
                android:text="@string/add_car_text"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:cornerRadius="3dp"
                app:strokeColor="@color/light_gray"
                app:strokeWidth="3dp" />
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>