<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".screens.home.main.address.SelectAreaFragment">

        <include
            android:id="@+id/app_bar"
            layout="@layout/add_car_app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" />

        <ScrollView
            android:id="@+id/area_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/submit_area_button"
            android:layout_below="@id/app_bar">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="2dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/area_city_serve_text"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <RadioGroup
                        android:id="@+id/city_option"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/city_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/radio_selector"
                            android:button="@color/transparent"
                            android:checked="true"
                            android:elevation="4dp"
                            android:padding="10dp"
                            android:text="@string/radio_button_1_text"
                            android:textColor="@drawable/radio_text_color"
                            android:textSize="17sp" />

                        <RadioButton
                            android:id="@+id/city_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:background="@drawable/radio_selector"
                            android:button="@color/transparent"
                            android:elevation="4dp"
                            android:padding="10dp"
                            android:text="@string/radio_button_2_text"
                            android:textColor="@drawable/radio_text_color"
                            android:textSize="17sp" />

                    </RadioGroup>

                    <include
                        android:id="@+id/area_search_view"
                        layout="@layout/search_view_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="15dp" />

                    <TextView
                        android:id="@+id/selection_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/select_area_text"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/area_list_rv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

                    <include
                        android:id="@+id/result"
                        layout="@layout/no_result_layout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </ScrollView>

        <Button
            android:id="@+id/submit_area_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_rectangle_button"
            android:text="@string/submit_area_button_text"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>
</layout>